--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -43,8 +43,8 @@
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
   font-weight: normal;
-  font-size: 26px;
-  text-decoration: none
+  font-size: 16px;
+  text-decoration: none;
 
   a + a {
     opacity: 0.5;
