--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -43,6 +43,8 @@
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
+  font-weight: normal;
+  font-size: 16px;
 
   a + a {
     opacity: 0.5;
