--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -45,6 +45,7 @@
   font-family: $sans-serif-narrow;
   font-weight: normal;
   font-size: 20px;
+  text-decoration: none;
 
   a + a {
     opacity: 0.5;
