--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -63,7 +63,7 @@
 .archive__item-excerpt {
   margin-top: 0;
   //font-size: $type-size-6;
-   font-size: $type-size-5;
+   font-size: $type-size-6p;
 
   & + p {
     text-indent: 0;
