--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -15,8 +15,8 @@
   }
 
   a {
-    //text-decoration: underline;
-    text-decoration: none;
+    text-decoration: underline;
+    //text-decoration: none; //added by Yong Zhang
 
     &:hover {
       text-decoration: underline;
@@ -84,7 +84,8 @@
   }
 
   .archive__item-title {
-    text-decoration: underline;
+    //text-decoration: underline;
+     text-decoration: none; //added by Yong Zhang
   }
 }
 
