--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,7 +74,7 @@ $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 //$info-color                 : #52adc8;
-$info-color                 : #3f51b5;
+$info-color                 : #0969da;
 
 /* brands */
 $behance-color              : #1769FF;
