--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,7 +74,7 @@ $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 //$info-color                 : #52adc8;
-$info-color                 : #0969da;  //added by Yong Zhang
+$info-color                 : #26a4c9;  //added by Yong Zhang
 
 /* brands */
 $behance-color              : #1769FF;
