--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,7 +38,7 @@ $type-size-2                : 1.953em;  // ~31.248px
 $type-size-3                : 1.563em;  // ~25.008px
 $type-size-4                : 1.25em;   // ~20px
 $type-size-5                : 1em;      // ~16px
-$type-size-6p               : 0.875em;  // ~14px
+$type-size-6p               : 0.875em;  // ~14px  //added by Yong
 $type-size-6                : 0.75em;   // ~12px
 $type-size-7                : 0.6875em; // ~11px
 $type-size-8                : 0.625em;  // ~10px
@@ -74,7 +74,7 @@ $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 //$info-color                 : #52adc8;
-$info-color                 : #26a4c9;  //added by Yong Zhang
+$info-color                 : #3fa8c7;  //added by Yong Zhang
 
 /* brands */
 $behance-color              : #1769FF;
