--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -43,7 +43,7 @@
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
-  //font-weight: normal;  //added by Yong
+  font-weight: normal;  //added by Yong
   //font-size: 20px;  //added by Yong
 
   a + a {
