--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -59,8 +59,8 @@ small, .small {
 }
 
 p {
-  //margin-bottom: 1.3em;
-  margin-bottom: 0.1em;  //added by Yong
+  margin-bottom: 1.3em;
+  //margin-bottom: 0.1em;  //added by Yong
 }
 
 u,
