--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -62,8 +62,8 @@
 
 .archive__item-excerpt {
   margin-top: 0;
-  font-size: $type-size-6;
-  //font-size: $type-size-6p; //added by Yong
+  //font-size: $type-size-6;
+  font-size: $type-size-6p; //added by Yong
 
   & + p {
     text-indent: 0;
